--- a/classwork/sn29939-CH2.ipynb
+++ b/classwork/sn29939-CH2.ipynb
@@ -2,19 +2,32 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Hello World\n"
-     ]
+     "data": {
+      "text/plain": [
+       "array([1, 1, 1, 0, 1, 0, 0, 1, 1])"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "print('Hello World')"
+    "import numpy as np\n",
+    "\n",
+    "def base_two(x):\n",
+    "    bits = []\n",
+    "    while(x>0):\n",
+    "        bits.append(x%2)\n",
+    "        x = x//2\n",
+    "        \n",
+    "    return np.array(bits[::-1])\n",
+    "\n",
+    "base_two(467)"
    ]
   },
   {
