--- a/classwork/sn29939-CH4.ipynb
+++ b/classwork/sn29939-CH4.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,13 +11,93 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
     "def leib_series (n):\n",
     "    \n",
-    "    value = 4*(((-1)**n)/(2n+1))"
+    "    value = 4*(((-1)**n)/(2*n+1))\n",
+    "    return value"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.00318301929431018\n",
+      "0.001591539484045989\n",
+      "0.001061030006672841\n",
+      "0.0007957734720706582\n",
+      "0.000636619135750372\n",
+      "0.0005305161085596649\n",
+      "0.00045472817682973846\n",
+      "0.00039788720230457477\n",
+      "0.000353677542155349\n",
+      "0.0003183098066059948\n",
+      "0.00028937256401525733\n",
+      "0.0002652581924342223\n",
+      "0.00024485372238193846\n",
+      "0.0002273641754167515\n",
+      "0.00021220656721108246\n",
+      "0.00019894365943672938\n",
+      "0.00018724109332290856\n",
+      "0.0001768388120132509\n",
+      "0.0001675315074430701\n",
+      "0.0001591549331452938\n",
+      "0.0001515761276852106\n",
+      "0.00014468630442799474\n",
+      "0.00013839559614847166\n",
+      "0.0001326291134867456\n",
+      "0.00012732394938037403\n",
+      "0.0001224268747737047\n",
+      "0.00011789254639482\n",
+      "0.00011368209858290424\n",
+      "0.0001097620264549851\n",
+      "0.00010610329244741256\n",
+      "0.00010268060577533156\n",
+      "9.94718370035312e-05\n",
+      "9.645753905293071e-05\n",
+      "9.362055273419335e-05\n",
+      "9.094567990954532e-05\n",
+      "8.841941112166417e-05\n",
+      "8.602969739594827e-05\n",
+      "8.376575807027212e-05\n",
+      "8.161791819117797e-05\n",
+      "7.957747030096378e-05\n",
+      "7.763655645027182e-05\n",
+      "7.57880670638004e-05\n",
+      "7.402555392470993e-05\n",
+      "7.234315501613672e-05\n",
+      "7.073552938894614e-05\n",
+      "6.91978005263728e-05\n",
+      "6.772550693205397e-05\n",
+      "6.631455890205059e-05\n",
+      "6.496120058634304e-05\n",
+      "6.366197660078155e-05\n"
+     ]
+    }
+   ],
+   "source": [
+    "sum = 0\n",
+    "counter = 0\n",
+    "\n",
+    "for i in range (0,5000):\n",
+    "    sum += leib_series(i)\n",
+    "    counter += 1\n",
+    "    if counter == 100:\n",
+    "        rel_error = np.abs((sum-np.pi)/np.pi)\n",
+    "        print(rel_error)\n",
+    "        counter = 0\n",
+    "    \n",
+    "\n",
+    "        \n",
+    "    "
    ]
   },
   {
@@ -25,16 +105,7 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "\n",
-    "for i in range (0,5000):\n",
-    "    counter = 1\n",
-    "    sum = 0\n",
-    "    for j in range (0,i):\n",
-    "        sum += leib_series(n)\n",
-    "        \n",
-    "    "
-   ]
+   "source": []
   }
  ],
  "metadata": {
